Fixing menu button bug for non mobile screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -341,6 +341,11 @@ li {
     display: none;
   }
 
+  .menu-btn {
+    display: none;
+    cursor: default;
+  }
+
   .navbar {
     display: block;
     align-self: center;
